# triangles

./: CMakeLists.txt  Individual.h  LICENSE  README.md  UI.cpp  UI.h  main.cpp
src/: main.cpp
src/model/: Individual.cpp  Individual.h  Population.cpp  Population.h  Target.cpp  Target.h
src/ui/: UI.cpp  UI.h
