cmake_minimum_required(VERSION 3.7)
project(triangles)

set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp UI.cpp UI.h Target.cpp Target.h Individual.cpp Individual.h Population.cpp Population.h)

add_executable(triangles ${SOURCE_FILES})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image >=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf >=2.0.0)
PKG_SEARCH_MODULE(SDL2GFX REQUIRED SDL2_gfx >=2.0.0)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2GFX_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2GFX_LIBRARIES})

