cmake_minimum_required(VERSION 3.5)
project(triangles)

set(CMAKE_CXX_STANDARD 11)
set(SOURCE_MODEL_FILES src/model/Target.cpp src/model/Target.h src/model/Individual.cpp src/model/Individual.h src/model/Population.cpp src/model/Population.h)
set(SOURCE_UI_FILES src/ui/UI.cpp src/ui/UI.h)
set(SOURCE_FILES src/main.cpp ${SOURCE_MODEL_FILES} ${SOURCE_UI_FILES})
add_executable(triangles ${SOURCE_FILES})

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image >=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf >=2.0.0)
PKG_SEARCH_MODULE(SDL2GFX REQUIRED SDL2_gfx >=2.0.0)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIR} ${SDL2TTF_INCLUDE_DIR} ${SDL2GFX_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES} ${SDL2GFX_LIBRARIES})

